--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <a href="./index.html"><img src="./images/0_XBlogo.png" alt=""></a>
     </logotohome>
     <h1>XBP</h1>
-        <h2>こうきのXBPポートフォリオ一覧</h2>
+        <h2>こうきXBPポートフォリオ一覧</h2>
         <!-- このようにするとコードとして認識されない。（メモができる）-->
         <!--番号付きのリスト-->
         <ol>
