--- a/de12/test.html
+++ b/de12/test.html
@@ -2,21 +2,71 @@
 <html lang="jp">
 <head>
     <!-- ⑥↓タイトルを変えてみよう -->
-    <title>〇〇のテストページ</title>
+    <title>あみくらのテストページ</title>
     <!-- ⑤スタイルシートの設定をしよう -->
+    <link rel="stylesheet" href="./css/style.css">
     <!-- h1.htmlからある行をコピペしてくればOK -->
 </head>
 <body>
-    <h1>見出し</h1>
+    <h1>あみくらのテストページです。ぐちゃぐちゃですね。</h1>
     <!-- 塊ごとにdivタグで区切るようにしましょう。 -->
     <div>
+       
          <!-- ①↓に文字を書いてみよう -->
+        
+      <div>
+　　　　 ▂▅▇███▇▄　　　　　　　　　　　▅█▀▀▀█▇▄ <br>
+　 　▄█▀▂▅▆████▄ 　　　　　　　　▆█▆▇▇▆▅██▆ <br>
+　█████████████　 　 　　 　　 ███████████ <br>
+　███████████■　　▄▅▅■▆▅▼██████■██ █<br>
+　 ████■▀▀███████▀　　　▀▀■███▆▅▅▆██ <br>
+　　▀█▅▄▄▅███████　 　◢━◣ 　 ▼　▀█████▀ <br>
+　　▀■██■▀████　 　┃　　 　◢━◣　　▼ <br>
+　　　　　　　　　▅████　　 　　◢━◣　 　 ‗ฺ┃▉ <br>
+　　　　　 　　　█████ 　 　　 ┃ 　┃　　┃　┃ █ <br>
+　　　　　　　　█████　 　 　 ┃▅ 　┃ 　┃▂ ┃ █ <br>
+　　　　　　　　■▀▀██　　　　　█▊　┃ 　 █▊┃　█ 　　　　　＜ハハッ<br>
+　　 　　 　　┃　　　 　　　 ▂▬━　　▆▇▀▀▆　 ◢▀┓ <br>
+　　　　　　 ┃　 　◢┳◣　　　 　　　　▀▀■▀▀　 　　┃ <br>
+　　　　　 　　◥◣ 　 　┃　　 　 　　　　　　　　　 ┳◣┃ <br>
+　　　　　　　　　◥◣　　　◥◣　　　　　　　　　▂◢◤◢◤ <br>
+　　　　　　　　 　　▲▂◣　▀▆▅▬▃▬▅▆　　 ◢◤ <br>
+　　　　　　　　　　▀▄ ▀▆▂　 ▼　　　▼ 　 ▲ <br>
+　　　　　　　　　　 　▀███▆▂ ▀■▀ ▂▆█▅▋ <br>
+　　　　　　　　　　　　▍ ▼▄██▆▅▆█▂▄█◤ <br>
+　　　　　　　　　　　　█▅██■▀◥▲◢■██ <br>
+　　　　　　　　　　　　 ▀■▀ 　 　　　　　▼ 
+
+
+         </div>
+         <h3>千葉県出身ですが、最後にディズニーへ行ったのは小学生のときです。あまり覚えていません。</h3><br>
+         <h3>千葉県民みんながディズニーへ行っていると思ったら、大間違いです。</h3><br>
+         <a href="http://azeria.jp/aa.php?id=461047406"target="_blank">引用元 ミッキーマウスAA</a><br>
 
          <!-- ②↓に画像（imagesフォルダにあるtest.png）を挿入してみよう -->
+         画像を表示(30%)<br>
+         <img src="./images/testimage.png" width="30%"><br>
+         画像を表示(40%)<br>
+         <img src="./images/testimage.png" width="%"><br>
+         <img src="./images/a001020018_01.jpg"width="20%"><br>
 
          <!-- ③↓に箇条書きをしてみよう -->
+         <ol>
+            <li>何を書けばいいんだ！！</li>
+            <li>月曜１限はしんどい。</li>
+         </ol>
+
+         <ul>
+            <li>ああああああ</li>
+           <li>ああああああああ</li>
+        </ul>
 
          <!-- ④↓に外部リンクを作ってみよう -->
+         <a href="./index.html">デザイン演習</a><br>
+         <a href="https://www.yahoo.co.jp/" target="_blank">Yahoo</a><br>
+         <h2>↓おすすめです</h2>
+
+         <iframe width="560" height="315" src="https://www.youtube.com/embed/4ZGTUOiFY-8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
     </div>
 
