--- a/de12/test.html
+++ b/de12/test.html
@@ -52,8 +52,8 @@
 
          <!-- ③↓に箇条書きをしてみよう -->
          <ol>
-            <li>何を書けばいいんだ！！</li>
-            <li>月曜１限はしんどい。</li>
+            <li>#バイト休みたい</li>
+            <li>月曜１限はしんどい</li>
          </ol>
 
          <ul>
