--- a/de12/1.html
+++ b/de12/1.html
@@ -2,13 +2,13 @@
 <html lang="jp">
 <head>
     <!-- ⑥↓タイトルを変えてみよう -->
-    <title>あみくらのテストページ</title>
+    <title></title>
     <!-- ⑤スタイルシートの設定をしよう -->
     <link rel="stylesheet" href="./css/style.css">
     <!-- h1.htmlからある行をコピペしてくればOK -->
 </head>
 <body>
-    <h1>あみくらのテストページです。ぐちゃぐちゃですね。</h1>
+    <h1>第１回のまとめ</h1>
     <!-- 塊ごとにdivタグで区切るようにしましょう。 -->
     <div>
        
@@ -22,13 +22,13 @@
 
          <!-- ③↓に箇条書きをしてみよう -->
          <ol>
-            <li>#バイト休みたい</li>
-            <li>月曜１限はしんどい</li>
+            <li></li>
+            <li></li>
          </ol>
 
          <ul>
-            <li>ああああああ</li>
-           <li>ああああああああ</li>
+            <li></li>
+           <li></li>
         </ul>
 
          <!-- ④↓に外部リンクを作ってみよう -->
