--- a/de12/index.html
+++ b/de12/index.html
@@ -18,7 +18,7 @@
             <li><a href="./test.html" target="_blank">テストページ</a></li>
         </ol>
         <h2>演習ノート一覧</h2>
-        <a href="./1.html"target="_blank">第1回</a>
+        <li><a href="./1.html"target="_blank">第1回</a></li>
 
 
 
