--- a/index.html
+++ b/index.html
@@ -2,21 +2,33 @@
 <html lang="jp">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
     <title>XBP_HPsample</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <logotohome>
-    <a href="./index.html"><img src="./images/0_XBlogo.png" alt=""></a>
-    </logotohome>
-    <h1>XBP</h1>
-        <h2>こうきのXBPポートフォリオ一覧</h2>
-        <!-- このようにするとコードとして認識されない。（メモができる）-->
-        <!--番号付きのリスト-->
+    <header class="header">
+        <div class="header-inner">
+        <a class="header-logo" href="./index.html">
+            <img src="./images/0_XBlogo.png" alt="XBPロゴ">
+        </a>
+        </div>
+    </header>
+   
+    <main class="main">
+    <div class="first-view">
+        <div class="first-view-text">
+            <h1>デザインとは、<br>物の意味を与えること。</h1>
+            <p>Klaus Krippendorff</p>
+        </div>
+    </div>
+    <h3>あみくら</h3>
         <ol>
             <li><a href="./de12/index.html">デザイン演習Ⅰ・Ⅱ</a></li>
             <li><a href="./digi_fab/index.html">デジタルファブリケーション</a></li>
         </ol>
+
+    </main>
 
             
         <br>
