--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
                 <a href="./de12/index.html"target="_blank"><img src="./de12/images/21830aIMGL99841974_TP_V.jpg" alt="デザイン演習画像"></a>
                 <dl>
                     <dt>デザイン演習Ⅰ・Ⅱ</dt>
-                    <dd>文化人類学的な観察力と共感力、オープンイノベーションに参加するための基礎的なデジタル技術を会得する</dd>
+                    <dd>文化人類学的な観察力と共感力、オープンイノベーションに参加する為の基礎的なデジタル技術を会得する</dd>
                 </dl>
             </li>
             <li>
                 <a href="./digi_fab/index.html"target="_blank"><img src="./de12/images/step05.png" alt="デジタルファブリケーション画像"></a>
                 <dl>
                     <dt>デジタルファブリケーション</dt>
-                    <dd>創造的な問題解決能力を得るための道具としてデジタルファブリケーションを扱えるようにする</dd>
+                    <dd>創造的な問題解決能力を得るための道具としてデジタルファブリケーションを<br>扱えるようにする</dd>
                 </dl>
             </li>
         </ul>
