--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <title>XBP_HPsample</title>
+    <title>XBP_HP</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,6 +16,7 @@
             <img src="./images/0_XBlogo.png" alt="XBPロゴ">
         </a>
         </div>
+        
     </header>
    
     <main class="main">
@@ -24,6 +25,11 @@
             <h1>デザインとは、<br>物の意味を与えること。</h1>
             <p>Klaus Krippendorff</p>
         </div>
+    </div>
+    <div class="lead">
+        <p>はじめまして。私、あみくらと申します。<br>生まれは千葉県の船橋市、住むには良い町ですが、<br>遊びに行くところはあってないようなもの、そんなところで生まれました。<br>このサイトでは、私の活動記録を閲覧することができます。
+            <br>至らない点もあるかと思いますが、何卒よろしくお願いいたします。
+        </p>
     </div>
     <div class="contents">
         <h2>CONTENTS</h2>
