--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main class="main">
     <div class="first-view">
         <div class="first-view-text">
-            <h1>デザインとは<br>物の意味を与えること。</h1>
+            <h1>デザインとは、<br>物の意味を与えること。</h1>
             <p>Klaus Krippendorff</p>
         </div>
     </div>
