--- a/de12/1.html
+++ b/de12/1.html
@@ -16,11 +16,12 @@
          <h2>gitについて</h2>
         <h3>・gitとは？</h3>
         <div>
-        webサイトを制作する中で私たちは、新しい機能を追加したり、不具合を直したりするわけですが、<br>その新たに追加したコードを記録し、管理するシステムが「git」
+        webサイトを制作する中で私たちは、新しい機能を追加したり、不具合を修正したりするわけですが、<br>その新たに追加したコードを記録し、管理するシステムを「git」
         といいます。<br>
 
         <h4>集中型と分散型の違い</h4>
-        
+        集中型
+
 
 
 
