--- a/de12/1.html
+++ b/de12/1.html
@@ -20,7 +20,10 @@
         といいます。<br>
 
         <h4>集中型と分散型の違い</h4>
-        集中型
+        <h2>集中型</h2><br>
+        <img src=".//images/スクリーンショット 2022-09-30 143726.png" alt="集中型の画像">
+        <h2>分離型</h2><br>
+        <img src=".//images/スクリーンショット 2022-09-30 143758.png" alt="分離型の画像">
 
 
 
