--- a/de12/1.html
+++ b/de12/1.html
@@ -1,29 +1,35 @@
 <!DOCTYPE html>
 <html lang="jp">
 <head>
-    <!-- ⑥↓タイトルを変えてみよう -->
     <title>あみくら　第一回</title>
-    <!-- ⑤スタイルシートの設定をしよう -->
+
     <link rel="stylesheet" href="./css/style.css">
-    <!-- h1.htmlからある行をコピペしてくればOK -->
+
 </head>
 <body>
-    <h1>第１回のまとめ</h1>
-    <!-- 塊ごとにdivタグで区切るようにしましょう。 -->
-    <div>
-       
-         <!-- ①↓に文字を書いてみよう -->
-         <h2>gitについて</h2>
+    <header class="header-de12">
+        <div class="header-text">
+            <h1>第一回のまとめ</h1>
+        </div>
+    </header>
+  
+    <div class="main-de12">
+
+        <h2>gitについて</h2>
         <h3>・gitとは？</h3>
         <div>
         webサイトを制作する中で私たちは、新しい機能を追加したり、不具合を修正したりするわけですが、<br>その新たに追加したコードを記録し、管理するシステムを「git」
         といいます。<br>
 
         <h4>集中型と分散型の違い</h4>
-        <h2>集中型</h2><br>
+        <div>
+        <h2>・集中型</h2><br>
         <img src=".//images/スクリーンショット 2022-09-30 143726.png" alt="集中型の画像">
-        <h2>分離型</h2><br>
+        </div>
+        <div>
+        <h2>・分離型（gitはコレ）</h2><br>
         <img src=".//images/スクリーンショット 2022-09-30 143758.png" alt="分離型の画像">
+        </div>
 
 
 
@@ -42,7 +48,7 @@
             「HTMLタグ」という目印を使ってコーディングしていきます。
         </div>
 
-        <h4>主なHTMLタグ</h4>
+        <h3>主なHTMLタグ</h3>
         <img src="./images/2022-09-27 (1).png" alt="主なHTMLタグ表">
         <div>
             画像以外にも、さまざまなHTMLタグが存在します。状況に合わせた、適切なHTMLタグを使用することが大切です。
