--- a/de12/1.html
+++ b/de12/1.html
@@ -3,7 +3,7 @@
 <head>
     <title>あみくら　第一回</title>
 
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css homework/style.css">
 
 </head>
 <body>
