--- a/de12/1.html
+++ b/de12/1.html
@@ -27,7 +27,7 @@
         <img src=".//images/スクリーンショット 2022-09-30 143726.png" alt="集中型の画像">
         </div>
         <div>
-        <h2>・分離型（gitはコレ）</h2><br>
+        <h2>・分離型（GitHubはコレ）</h2><br>
         <img src=".//images/スクリーンショット 2022-09-30 143758.png" alt="分離型の画像">
         </div>
 
