--- a/de12/1.html
+++ b/de12/1.html
@@ -24,12 +24,24 @@
         <h4>集中型と分散型の違い</h4>
         <div>
         <h2>・集中型</h2><br>
+        <h3>皆で一つのリポジトリを使って共有する</h3><br>
         <img src=".//images/スクリーンショット 2022-09-30 143726.png" alt="集中型の画像">
         </div>
         <div>
         <h2>・分離型（GitHubはコレ）</h2><br>
+        <h3>各々自分用のリポジトリを持ち、好きなタイミングで共同のリポジトリと同期する</h3><br>
         <img src=".//images/スクリーンショット 2022-09-30 143758.png" alt="分離型の画像">
         </div>
+
+        <h3>詳しくは<a href="https://next.rikunabi.com/journal/20160908_t12_iq/"target="_blank">コチラ</a></h3>
+        （リクナビNEXTジャーナル　マンガでわかるGit 第6話「集中型と分散型、何がどう違うの？」）
+
+        <div>
+            <a href="https://atmarkit.itmedia.co.jp/ait/articles/1307/05/news028.html"target="_blank">参考文献</a><br>
+            （IT media inc. ガチで5分で分かる分散型バージョン管理システムGit）
+
+        </div>
+
 
 
 
@@ -51,7 +63,8 @@
         <h3>主なHTMLタグ</h3>
         <img src="./images/2022-09-27 (1).png" alt="主なHTMLタグ表">
         <div>
-            画像以外にも、さまざまなHTMLタグが存在します。状況に合わせた、適切なHTMLタグを使用することが大切です。
+            画像以外にも、さまざまなHTMLタグが存在します。状況に合わせた、適切なHTMLタグを使用することが大切です。<br>
+            より詳しく知りたい方は、<a href="https://zero-plus.io/media/html-tags-and-usage/"target="_blank">ここ</a>から。（ZeroPlus Media "HTMLのよく使うタグ一覧！この15個さえ押さえればOK！")
         </div>
         
 
