--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Oooh+Baby&display=swap" rel="stylesheet">
 <script type="text/javascript" src="jquery-3.6.1.min.js"></script>
 </head>
 <body>
@@ -22,15 +25,24 @@
     <main class="main">
     <div class="first-view">
         <div class="first-view-text">
+            <div class="fade-text to__right" style="--duration: 2.4s; --delay: 0.6s; --ease: ease-out">
             <h1>デザインとは、<br>物の意味を与えること。</h1>
+            </div>
+            <div class="person">
+            <div class="fade-text to__left" style="--duration: 2.4s; --delay: 0.6s; --ease: ease-out">
             <p>Klaus Krippendorff</p>
+            </div>
+            </div>
+            
         </div>
     </div>
+    
     <div class="lead">
         <p>はじめまして。私、あみくらと申します。<br>生まれは千葉県の船橋市、住むには良い町ですが、<br>遊びに行くところはあってないようなもの、そんなところで生まれました。<br>このサイトでは、私の活動記録を閲覧することができます。
             <br>至らない点もあるかと思いますが、何卒よろしくお願いいたします。
         </p>
     </div>
+
     <div class="contents">
         <h2>CONTENTS</h2>
         <ul class="item-list">
