--- a/de12/2.html
+++ b/de12/2.html
@@ -35,7 +35,7 @@
    <table>
     <tr>
     <div class="street">
-    <td><img src="./images/IMG_9206.PNG" alt="きりん食堂"></td>
+    <td><img src="./images/IMG_E9202 (1).jpg" alt="きりん食堂"></td>
     </div>
     <td>&nbsp;</td>
     <td class="street-text"><h2>10月10日、千葉県内で私自身が撮影した。<br>こじんまりとした、良い雰囲気の定食屋。<br>きりんの看板が一際目を引く。<br>
