--- a/de12/2.html
+++ b/de12/2.html
@@ -17,7 +17,7 @@
     </header>
   
 <div class="main-de12">
-    <h1>-1-</h1>
+    <h1 class="number">-1-</h1>
    <table>
     <tr>
     <div class="street">
@@ -31,7 +31,7 @@
    <h4><a href="https://www.828.co.jp/" target="_blank">株式会社やつやトップページ</a></h4>
    <h5>お酒は20歳になってから</h5>
    
-   <h1>-2-</h1>
+   <h1 class="number">-2-</h1>
    <table>
     <tr>
     <div class="street">
