--- a/de12/2.html
+++ b/de12/2.html
@@ -24,7 +24,7 @@
     <td><img src="./images/IMG_9201.jpg" alt="やつやの画像"></td>
     </div>
     <td>&nbsp;</td>
-    <td class="street-text"><h2>10月10日、千葉県内で私自身が撮影した。<br>地元の酒屋の壁面の写真。<br>自社のwebページのurlを壁に構築するという斬新さ。<br>
+    <td class="street-text"><h2>10月10日、千葉県内で私自身が撮影した。<br>地元の酒屋の壁面の写真。<br>自社のwebページのurlを壁に施工するという斬新さ。<br>
     極限までシンプルに仕上げ、覚えやすいurlで、<br>客の興味を惹いている。</h2></td>
    </tr>
    </table>
@@ -40,6 +40,19 @@
     <td>&nbsp;</td>
     <td class="street-text"><h2>10月10日、千葉県内で私自身が撮影した。<br>こじんまりとした、良い雰囲気の定食屋。<br>きりんの看板が一際目を引く。<br>
     お店の前を通るたび、きりんと目が合う。<br>しかしながら、お店の中に入ったことは一度もない。<br>これを機に、一度行ってみるのも良いかもしれない。</h2></td>
+   </tr>
+   </table>
+
+   <h1 class="number">-3-</h1>
+   <table>
+    <tr>
+    <div class="street">
+    <td><img src="./images/IMG_7868.jpg" alt="ゴルゴ13"></td>
+    </div>
+    <td>&nbsp;</td>
+    <td class="street-text"><h2>昨年度末、友達と高校卒業旅行で行った草津にて私が撮影した。<br>温泉街にある射的屋。<br>一見普通の射的屋だが、ところどころに客を楽しませる工夫が。<br>
+    「歩み入る者にワクワクを　去りゆくひとにスマイルを」<br>といったキャッチコピーや、<br>正しくマスクを着用してもらう注意書きの最後、<br>「ゴルゴ13レベルの狙撃手　入店お断り」の文字が。<br>
+観光地ならではの粋な計らいで、店主のプロ意識を感じる。</h2></td>
    </tr>
    </table>
 
