--- a/de12/2.html
+++ b/de12/2.html
@@ -51,7 +51,7 @@
     </div>
     <td>&nbsp;</td>
     <td class="street-text"><h2>昨年度末、友達と高校卒業旅行で行った草津にて私が撮影した。<br>温泉街にある射的屋。<br>一見普通の射的屋だが、ところどころに客を楽しませる工夫が。<br>
-    「歩み入る者にワクワクを　去りゆくひとにスマイルを」<br>といったキャッチコピーや、<br>正しくマスクを着用してもらう注意書きの最後、<br>「ゴルゴ13レベルの狙撃手　入店お断り」の文字が。<br>
+    「歩み入る者にワクワクを　去りゆくひとにスマイルを」<br>といったキャッチコピーや、<br>正しくマスクを着用してもらう注意書きの最後、<br>「ゴルゴ13レベルの狙撃手」入店お断りの文字が。<br>
 観光地ならではの粋な計らいで、店主のプロ意識を感じる。</h2></td>
    </tr>
    </table>
