--- a/de12/2.html
+++ b/de12/2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="jp">
 <head>
-    <title>あみくら　第一回</title>
+    <title>あみくら　第２回</title>
 
     <link rel="stylesheet" href="./css homework/style.css">
     
