--- a/digi_fab/fa1.html
+++ b/digi_fab/fa1.html
@@ -15,7 +15,7 @@
   
     <div class="main-digi">
         <div class="boutou">
-            <h2>おはようございます。あみくらです。<br>今回は、金曜2限デジタルファブリケーションの課題であります、<br>
+            <h2>おはようございます。<br>今回は、金曜2限デジタルファブリケーションの課題であります、<br>
             3Dプリントを用いてピンセットを進化させるといった内容となっております。</h2>
         </div>
 
@@ -77,7 +77,7 @@
        </div>
 
        <div>
-        <h1>ここで、笛付きピンセットを作ろう！<br>と思い立った訳です。</h1>
+        <h1>ここで、ピンセットに笛がついていたら、面白そう！<br>と思い立った訳です。</h1>
        </div>
 
        <div class="title2">
@@ -85,9 +85,73 @@
        </div>
 
        <div>
-        <h2>そもそも、なぜフエラムネは音が鳴るのでしょうか。</h2>
+        <h2>そうと決まれば、早速取り掛かることにしましょう</h2>
+        </div>
+        <div>
+            <h2>そもそも、なぜフエラムネは音が鳴るのでしょうか。<br>仕組みは至ってシンプル。</h2>
+            <div class="fueramune">
+            <img src="./images/IMG_9486.jpg"><img src="./images/IMG_9488.jpg">
+            </div>
+            <h2>息を吹き込むと、ラムネ内の空洞で空気による振動が起き、音が鳴る仕組み。<br>
+            原理としては、風が吹いている日に、窓を少し開けると音が鳴ったり、<br>縄跳びを跳んでいる時やラケットを振ったときに音が鳴ったりするのと同じです。</h2>
+            詳しくはコチラ→<a href="http://web.kyoto-inet.or.jp/people/ebisan/huegum.htm"target="_blank">フエガムもどき笛 - kyoto-Inet</a><br>
+            <a href="https://kotobank.jp/word/%E3%82%AB%E3%83%AB%E3%83%9E%E3%83%B3%E6%B8%A6-468277"target="_blank">カルマン渦とは - コトバンク</a>
         
+        </div>
 
-       </div>
+        <div>
+           <h2>仕組みが分かったら、次はモデリングです。<br>
+        出来上がった物がコチラ</h2>
+        <img src="./images/スクリーンショット2022-10-15 134446.png"><br>
+        <a href="./fueramune2.stl">stlファイル</a>
+        <h2>これを２つプリントし、上下逆さにくっつけて空洞を作ろうと考えました。</h2>
+        参考にしたサイト→<a href="https://forums.autodesk.com/t5/fusion-360-ri-ben-yu/ping-mianni-duisurukubomi-dinpuru/td-p/7121074">平面に対するくぼみ（ディンプル） - Autodesk Community</a>
+        </div>
+        <div>
+            <h2>プリントしたものがこれ</h2>
+            <img src="./images/IMG_9471.jpg">
+            <h2>良い感じです。</h2>
+        </div>
+        <div>
+            <h2>これらを接着します</h2>
+            <img src="./images/IMG_9477.jpg">
+            <h2>若干見づらいですが、中に空洞ができました。</h2>
+        </div>
+        <div>
+            <h2>実際に吹いてみます</h2>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/zCiG2csf22A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <h2>音が鳴りました。構造は問題ないようですね。<br>しかし、音量は70dB後半といったところ。<br>もう少し音が大きくなるものを作ろうと思います。</h2>
+        </div>
+        <div>
+            <h2>出来ました</h2>
+            <img src="./images/2022-10-15 143034.png"><img src="./images/2022-10-15 143054.png"><br>
+            <a href="./fueramune4.stl">stlファイル</a>
+            <h2>トーラスでドーナツのような形を作り、上下で分割し、下半分を消し去った後、シェルという機能で空洞化しています。<br>ほぼフエラムネの形ができました。<br>
+            先程の作品より空洞が多くなったので、期待できそうです。</h2>
+        </div>
+        <div>
+            <h2>出来上がった物がこれ</h2>
+            <img src="./images/IMG_9489.jpg">
+        </div>
+
+        <div>
+            <h2>実際の動画がこちら</h2>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/B-CXNRAYD3Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div>
+            <h2>80dB後半でした。約10dB上昇させる事ができました。成功です。</h2>
+        </div>
+
+        <div class="title">
+            <h1>4.まとめ・感想等</h1>
+
+        </div>
+        <div>
+            <h2>今回は、ピンセットに笛を付け、音のなるピンセットを制作しました。<br>3DCADの使い方や3Dプリンターの機能など、手こずるところもありましたが、<br>
+            最終的には形になって一安心です。<br>今回習得した事を、今後更に活かせるよう、精進いたします。<br>少々長くなってしまいましたが、ご覧下さりありがとうございました。</h2>
+        </div>
+        <div>
+            <h1>以上</h1>
+        </div>
 </body>
 </html>
