--- a/digi_fab/fa1.html
+++ b/digi_fab/fa1.html
@@ -114,7 +114,7 @@
         </div>
         <div>
             <h2>これらを接着します</h2>
-            <img src="./images/IMG_9477.jpg">
+            <img src="./images/IMG_9477 (1).jpg">
             <h2>若干見づらいですが、中に空洞ができました。</h2>
         </div>
         <div>
