--- a/digi_fab/fa1.html
+++ b/digi_fab/fa1.html
@@ -89,7 +89,7 @@
         </div>
         <div>
             <h2>そもそも、なぜフエラムネは音が鳴るのでしょうか。<br>仕組みは至ってシンプル。</h2>
-            <div class="fueramune">
+            <div class="fueramune2">
             <img src="./images/IMG_9486.jpg"><img src="./images/IMG_9488.jpg">
             </div>
             <h2>息を吹き込むと、ラムネ内の空洞で空気による振動が起き、音が鳴る仕組み。<br>
