--- a/digi_fab/index.html
+++ b/digi_fab/index.html
@@ -2,7 +2,7 @@
 <html lang="jp">
 <head>
     <meta charset="UTF-8">
-    <title>XBP_HPsample</title>
+    <title>XBP_HP</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" href="./images/xbp.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
