--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Zen+Old+Mincho&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 <script type="text/javascript" src="jquery-3.6.1.min.js"></script>
 </head>
 <body>
@@ -40,8 +43,12 @@
         </div>
     </div>
     
+    <div>
+        <p id="animation">はじめまして。<br></p>
+        <script src="./jquery"></script>
+    </div>
     <div class="lead">
-        <p>はじめまして。私、あみくらと申します。<br>生まれは千葉県の船橋市、住むには良い町ですが、<br>遊びに行くところはあってないようなもの、そんなところで生まれました。<br>このサイトでは、私の活動記録を閲覧することができます。
+        <p>私、あみくらと申します。<br>生まれは千葉県の船橋市、住むには良い町ですが、<br>遊びに行くところはあってないようなもの、そんなところで生まれました。<br>このサイトでは、私の活動記録を閲覧することができます。
             <br>至らない点もあるかと思いますが、何卒よろしくお願いいたします。
         </p>
     </div>
@@ -67,6 +74,6 @@
     </div>
     
     </main>
-
+<script src="jquery-3.6.1.min.js"></script>
 </body>
 </html>
