--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     
     <div>
         <p id="animation">はじめまして。<br></p>
-        <script src="./jquery"></script>
+        <script src="./jquery.js"></script>
     </div>
     <div class="lead">
         <p>私、あみくらと申します。<br>生まれは千葉県の船橋市、住むには良い町ですが、<br>遊びに行くところはあってないようなもの、そんなところで生まれました。<br>このサイトでは、私の活動記録を閲覧することができます。
@@ -66,7 +66,11 @@
 
 
     <div class="contents">
-        <h2>CONTENTS</h2>
+        <p>
+            <span class="slide-in leftAnime">
+            <span class="slide-in_inner">CONTENTS</span>
+            </span>
+            </p>
     
         <ul class="item-list">
             <li>
