--- a/de12/3.html
+++ b/de12/3.html
@@ -15,8 +15,40 @@
             <h1>第3回　移動観察</h1>
         </div>
     </header>
-  
+
 <div class="main-de12">
+    <div>
+        <h2>観察内容：靴の種類・色と性別・年齢の関係性</h2>
+    </div>
+    <div>
+        <h2>観察経路：下記添付画像の通り</h2>
+        <img src="./images/スクリーンショット 2022-10-11 161746.png">
+    </div>
+    <div>
+       <h2>観察実施日時：10月18日　赤線上→14時～14時15分　青線上→14時30分～14時45分</h2> 
+    </div>
+   <div>
+    <h2>観察方法：メンバー１名がスマートフォンにより撮影。<br>　　　　　撮影された動画を後日集計した。</h2>
+   </div>
+   <div class="result">
+    <h1>男女・年代別に集計した靴の種類について</h1>
+   </div>
+   <div class="mainread">
+    今回の観察では、男性35名・女性31名を調査した。
+   </div>
+   <div>
+    撮影した動画に写っていた方の年代は男性、女性共に（推測にはなってしまうのだが）下が10代、上が50代だった。<br>
+    靴の種類の分類は、定点観察時同様、「スニーカー」「革靴」「ブーツ」「サンダル」とする。<br>
+    以下が調査結果である。
+   </div>
+   <div>
+    <img src="./images/234451.png">
+   </div>
+   <div>圧倒的にスニーカーが多く見受けられる。観察を行ったのがお昼過ということもあり、スーツ姿のサラリーマンよりも、子供連れや散歩をしている方が多く居た印象。<br>
+とは言うものの、みなとみらいには多くのオフィスビルが建ち並んでいるためか、スーツを着て革靴を履いている男性も、ちらほら居た。<br>
+スニーカーと革靴の分布を見ると、スニーカーは年代が高くなるごとに人数が減少するのに対し、革靴は20代、30代と人数が増加し、40代が最も多いことが分かる。<br>
+あたりまえと言えばあたりまえなのだが、日々働いていらっしゃる方は、そのほとんどが大人であり、
+移動観察では、ブーツやサンダルを履いた男性は確認できなかった。</div>
    
 
 
