--- a/de12/3.html
+++ b/de12/3.html
@@ -37,18 +37,70 @@
     今回の観察では、男性35名・女性31名を調査した。
    </div>
    <div>
-    撮影した動画に写っていた方の年代は男性、女性共に（推測にはなってしまうのだが）下が10代、上が50代だった。<br>
+    撮影した動画に写っていた方の年代は男性、女性共に（推測になってしまうが）下が10代、上が50代だった。<br>
     靴の種類の分類は、定点観察時同様、「スニーカー」「革靴」「ブーツ」「サンダル」とする。<br>
     以下が調査結果である。
    </div>
    <div>
     <img src="./images/234451.png">
    </div>
-   <div>圧倒的にスニーカーが多く見受けられる。観察を行ったのがお昼過ということもあり、スーツ姿のサラリーマンよりも、子供連れや散歩をしている方が多く居た印象。<br>
+   <div>圧倒的にスニーカーが多く見受けられる。観察を行ったのがお昼過ぎということもあり、スーツ姿のサラリーマンよりも、子供連れや散歩をしている方が多く居た印象。<br>
 とは言うものの、みなとみらいには多くのオフィスビルが建ち並んでいるためか、スーツを着て革靴を履いている男性も、ちらほら居た。<br>
 スニーカーと革靴の分布を見ると、スニーカーは年代が高くなるごとに人数が減少するのに対し、革靴は20代、30代と人数が増加し、40代が最も多いことが分かる。<br>
-あたりまえと言えばあたりまえなのだが、日々働いていらっしゃる方は、そのほとんどが大人であり、
-移動観察では、ブーツやサンダルを履いた男性は確認できなかった。</div>
+カジュアルな印象を持つスニーカーは歳を重ねるにつれ避けられ、逆にフォーマル感のある革靴は30代、40代と年齢が上がるにつれ好まれる傾向にある。<br>
+年齢を重ねると人間は周りから、より大人らしく見られたいという思考にあるのかもしれない。<br>
+また、移動観察では、ブーツやサンダルを履いた男性は確認できなかった。</div>
+
+<div>
+    次に女性の分布を見る。
+</div>
+<div>
+    <img src="./images/234752.png">
+</div>
+<div>
+    スニーカーに注目すると、30代が最も多いことが分かる。これは、小さいこどもを連れた女性が多かったことが起因しているのだろうと思う。<br>
+    革靴を履いている女性のほとんどが仕事中で、オフィスカジュアルな服装の方が多かった。<br>
+    男性には見られなかったブーツやサンダルも、女性には見受けられた。<br>
+    一言にサンダルといっても、作りはしっかりとしており、フォーマルな印象を受けるもので、みなとみらいの敷居の高さを感じた。
+</div>
+
+<div class="result">
+    <h1>靴の色と性別・年齢の関係</h1>
+</div>
+<div>
+    性別、年齢で、靴の配色に差が生じるのか調査した。
+</div>
+<div>
+    以下の画像は、男性の靴の色を年代別に集計した結果であり、円グラフの塗りつぶした色が今回調査した靴の色である。
+    <img src="./images/002723.png">
+</div>
+<div>
+    基本的には、白色か黒色の靴を履いている人がほとんどだった。<br>
+    40代はモノクロ色の他に、赤色やグレーといった色も見受けられ、お洒落な雰囲気のおじさまもいることが分かる。<br>
+    しかし、全体的に調査の対象者数が非常に少なく、信憑性にかけるものとなってしまった。
+</div>
+<div>
+    女性の色の割合は以下の通りである。
+</div>
+<div>
+    <img src="./images/002746.png">
+</div>
+<div>
+    こちらも男性と同様、黒色や白色の靴が多い。<br>
+    男性との違いといえば、全ての年代の半数以上が黒色の靴を履いているところだ。<br>
+    落ち着いた雰囲気を与えられる黒色は女性に好まれるのかもしれない。
+</div>
+<div class="result">
+    <h1>まとめ</h1>
+</div>
+<div>
+    今回は、男女・年齢で靴の種類や色に違いが生じるのか、移動観察にて調査した。<br>
+    男女で共通していたところとしては、ひとりひとり自分のライフスタイルに合わせた靴の形状・色を選択していることだ。<br>
+    また、その人が周りからどのように思われたいのか、靴を観察する事により推測できる事が分かる。<br>
+    靴の種類については、概ね得られる情報は多かったが、色については、より多くの人を観察すべきだった。<br>
+    今後、調査や観察をする機会があれば、より多くの人を分析し、より信憑性の高い資料を作りたい。
+    
+</div>
    
 
 
