--- a/de12/4.html
+++ b/de12/4.html
@@ -19,11 +19,35 @@
   <div>
     <h3>今回は、pythonというプログラミング言語でブラックジャックを制作しました。</h3>
   </div>
-
   <div>
-    <a href="./python.html">コードはこちらから</a>
+    <h2>ルール説明</h2>
+  </div>
+  <div>
+    <ul>
+      <li>プレイ人数は1~3名</li>
+      <li>プレイヤーとディーラーのトランプの合計がどちらがより21に近いのか競うゲーム</li>
+      <li>今回は「A」は1点として扱う</li>
+      <li>詳しい説明はゲーム開始時に記載</li>
+    </ul>
   </div>
 
 
+  <div>
+    <h3><a href="./python.html"target="_blank">コードはこちらから</a></h3>
+  </div>
+
+  <div>
+    <h3>感想・まとめ</h3>
+  </div>
+
+  <div>
+    班員と話し合い、ブラックジャックを作ろうという話になった。pythonを扱ったことはなかったので、半ば無理やり完成させた。<br>
+    より自分にpythonの知識があればもっと楽に、見やすいコードが書けたのではと思う。<br>
+    話し合った際のブラックジャックのルールを100％反映させることは難しく、多少自分なりに変えてしまった部分がある。<br>
+    また、トランプの数字と柄はジョーカーを除き計52パターンあるが、今現在のコードでは、１ゲームで数回同じ絵柄・数字のカードを引いてしまう状態である。<br>
+    自分なりに調べ、対処方らしきものもあったのだが、ゲーム進行に組み込む事ができなかった。<br>
+    加えて、テストプレイ回数に限界があり、不具合がないとは言い切れない。これらは今後の課題である。<br>
+    少なからず大変なこともあったが、総じて楽しかった。
+  </div>
 </div>
 </body>
