--- a/de12/4.html
+++ b/de12/4.html
@@ -41,7 +41,7 @@
   </div>
 
   <div>
-    班員と話し合い、ブラックジャックを作ろうという話が出た。pythonを扱ったことはなかったので、半ば無理やり完成させた。<br>
+    班員と話し合い、ブラックジャックを作ろうという案が出た。pythonを扱ったことはなかったので、半ば無理やり完成させた。<br>
     より自分にpythonの知識があればもっと楽に、見やすいコードが書けたのではと思う。<br>
     話し合った際のブラックジャックのルールを100％反映させることは難しく、多少自分なりに変えてしまった部分がある。<br>
     また、トランプの数字と柄はジョーカーを除き計52パターンあるが、今現在のコードでは、１ゲームで数回同じ絵柄・数字のカードを引いてしまう可能性がある状態である。<br>
