--- a/de12/4.html
+++ b/de12/4.html
@@ -47,7 +47,8 @@
     また、トランプの数字と柄はジョーカーを除き計52パターンあるが、今現在のコードでは、１ゲームで数回同じ絵柄・数字のカードを引いてしまう可能性がある状態である。<br>
     自分なりに調べ、対処方らしきものもあったのだが、ゲーム進行に組み込む事ができなかった。<br>
     加えて、テストプレイ回数に限界があり、不具合がないとは言い切れない。これらは今後の課題である。<br>
-    少なからず大変なこともあったが、総じて楽しかった。
+    少なからず大変なこともあったが、総じて楽しかった。<br>
+    追記：3人対戦は不備が多い為閉鎖します。すみません。
   </div>
 </div>
 </body>
